<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bh.spring-cloud-contract-zip-sample</groupId>
    <artifactId>spring-cloud-contract-zip-sample</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>

        <spring-cloud-contract.version>2.1.0.RC3</spring-cloud-contract.version>
        <spring-reactor.version>1.0.1.RELEASE</spring-reactor.version>
        <openapi.version>3.3.4</openapi.version>
        <swagger.version>2.0.5</swagger.version>
        <swagger-ui.version>3.20.3</swagger-ui.version>
        <swagger-annotations.version>1.5.21</swagger-annotations.version>
        <guava.version>26.0-jre</guava.version>

        <!-- Testing -->
        <junit.version>4.12</junit.version>
        <rest-assured.version>3.2.0</rest-assured.version>
    </properties>

    <modules>
        <module>api</module>
        <module>server</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.1.RELEASE</version>
    </parent>

    <scm>
        <connection>scm:git:https://github.com/benoitheinrich/spring-cloud-contract-zip-sample.git</connection>
        <url>scm:git:https://github.com/benoitheinrich/spring-cloud-contract-zip-sample.git</url>
        <developerConnection>scm:git:https://github.com/benoitheinrich/spring-cloud-contract-zip-sample.git</developerConnection>
    </scm>

    <pluginRepositories>
        <pluginRepository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>http://repo.spring.io/milestone</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>http://repo.spring.io/milestone</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.cloud</groupId>
                    <artifactId>spring-cloud-contract-maven-plugin</artifactId>
                    <version>${spring-cloud-contract.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.21.0</version>
                    <configuration>
                        <printSummary>false</printSummary>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        <argLine>
                            -ea
                            -Djava.net.preferIPv4Stack=true
                            -Djava.net.preferIPv6Addresses=false
                            -XX:+TieredCompilation
                            -XX:TieredStopAtLevel=1
                            -Xmx768m
                            -XX:MaxPermSize=375m
                            -Duser.language=en
                            -Duser.region=US
                            -Duser.timezone=UTC
                            -Dfile.encoding=UTF-8
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-dependencies</artifactId>
                <version>${spring-cloud-contract.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.bh.spring-cloud-contract-zip-sample</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bh.spring-cloud-contract-zip-sample</groupId>
                <artifactId>api</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.parser.v3</groupId>
                <artifactId>swagger-parser</artifactId>
                <version>${swagger.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.swagger.parser.v3</groupId>
                        <artifactId>swagger-parser-v2-converter</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>swagger-ui</artifactId>
                <version>${swagger-ui.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>